# boilerplate-python-agent-harness

./: .env.example  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.agents/skills/add-entity/: SKILL.md
.agents/skills/add-entity-tests/examples/: sample.md
.agents/skills/add-entity-tests/scripts/: validate.sh
.agents/skills/add-entity/examples/: sample.md
.claude/skills/add-entity/: template.md
.claude/skills/add-entity-tests/: CORRECTIONS.md  INDEX.md  QUICK_REFERENCE.md  README.md  SKILL.md  template.md
.claude/skills/add-entity-tests/examples/: sample.md
.claude/skills/add-entity-tests/scripts/: validate.sh
.claude/skills/add-entity/scripts/: validate.sh
.cursor/agents/: entity-from-spec.md
.cursor/plans/: agent_harness_boilerplate_v0_71de6313.plan.md  pydantic-ai_alignment_review_bdfab592.plan.md  stateful_agent_sessions_e740b4c1.plan.md
migrations/versions/: 2026_04_22_1148-5928f2a9cf51_add_agent_sessions_and_messages.py
src/agents/: deps.py  messages_history_helpers.py  model_factory.py  registry.py  runner.py
src/agents/sample/: agent.py  prompts.py  system_prompt.md
src/agents/tools/: user_tools.py
src/api_server/: deps.py  main.py
src/api_server/routers/: agent.py  user.py
src/config/: config.py  logging_config.py
src/constants/: __init__.py
src/data_services/: agent_message_data_service.py  agent_session_data_service.py  crud.py  user_data_service.py
src/database/: db_engine.py
src/database/entities/: __init__.py  agent_message.py  agent_session.py
src/mappers/: agent_message.py  agent_session.py
src/models/: agent.py  agent_session.py  tool_execution_error.py
src/services/: agent_conversation_service.py  agent_message_service.py  agent_session_service.py  base_service.py  user_service.py
src/tests/: conftest.py
src/tests/fixtures/: agent_fixtures.py
src/tests/unit/agents/: test_history.py  test_runner.py  test_sample_agent.py
src/tests/unit/data_services/: test_crud.py
src/tests/unit/routers/: test_agent.py  test_user.py
src/tests/unit/services/: test_agent_conversation_service.py  test_agent_message_service.py  test_agent_session_service.py  test_base_service.py  test_user_service.py
src/utils/: exceptions.py
